[gd_scene load_steps=4 format=3 uid="uid://dal32d7ja8qjd"]

[ext_resource type="Script" path="res://Container.gd" id="1_xh2fy"]
[ext_resource type="FontFile" uid="uid://bqt0sd2ro5uv2" path="res://Minecraft.ttf" id="1_xkrub"]
[ext_resource type="Texture2D" uid="uid://befi6bmxnoi3m" path="res://sprites/carrot/pngs/heart_carrot.png" id="3_r71dq"]

[node name="Container" type="Control"]
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 454.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_xh2fy")
metadata/_edit_use_anchors_ = true

[node name="Opaque" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 666.0
offset_top = 418.0
offset_right = 985.0
offset_bottom = 510.0
color = Color(0.266575, 0.266575, 0.266575, 0.501961)

[node name="CountdownLabel" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
offset_top = 1.0
offset_right = 143.0
offset_bottom = 121.0
theme_override_fonts/font = ExtResource("1_xkrub")
theme_override_font_sizes/font_size = 120
text = "60"

[node name="TotalLabel" type="Label" parent="."]
visible = false
texture_filter = 1
layout_mode = 1
offset_top = 106.0
offset_right = 143.0
offset_bottom = 226.0
theme_override_fonts/font = ExtResource("1_xkrub")
theme_override_font_sizes/font_size = 80
text = "0"

[node name="PauseLabel" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
offset_top = 813.0
offset_right = 235.0
offset_bottom = 933.0
scale = Vector2(1, 1.00322)
mouse_filter = 1
theme_override_fonts/font = ExtResource("1_xkrub")
theme_override_font_sizes/font_size = 80
text = "pause"

[node name="ResumeLabel" type="Label" parent="."]
visible = false
texture_filter = 1
layout_mode = 1
offset_left = 679.0
offset_top = 427.0
offset_right = 969.0
offset_bottom = 547.0
scale = Vector2(1, 1.00322)
mouse_filter = 1
theme_override_fonts/font = ExtResource("1_xkrub")
theme_override_font_sizes/font_size = 80
text = "resume"

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = 911.0
offset_top = -5.0
offset_right = 1607.0
offset_bottom = 61.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_direction = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CarrotLife_7" type="TextureRect" parent="Control/HBoxContainer"]
visible = false
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_r71dq")
expand_mode = 2
stretch_mode = 4

[node name="CarrotLife_6" type="TextureRect" parent="Control/HBoxContainer"]
visible = false
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_r71dq")
expand_mode = 2
stretch_mode = 4

[node name="CarrotLife_5" type="TextureRect" parent="Control/HBoxContainer"]
visible = false
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_r71dq")
expand_mode = 2
stretch_mode = 4

[node name="CarrotLife_4" type="TextureRect" parent="Control/HBoxContainer"]
visible = false
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_r71dq")
expand_mode = 2
stretch_mode = 4

[node name="CarrotLife_3" type="TextureRect" parent="Control/HBoxContainer"]
visible = false
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_r71dq")
expand_mode = 2
stretch_mode = 4

[node name="CarrotLife_2" type="TextureRect" parent="Control/HBoxContainer"]
visible = false
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_r71dq")
expand_mode = 2
stretch_mode = 4

[node name="CarrotLife_1" type="TextureRect" parent="Control/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_r71dq")
expand_mode = 2
stretch_mode = 4

[connection signal="gui_input" from="PauseLabel" to="." method="_on_pause_label_gui_input"]
[connection signal="gui_input" from="ResumeLabel" to="." method="_on_resume_label_gui_input"]
